--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="index.css">
-    <title>Yandex</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="index.css">
+  <title>Yandex</title>
 </head>
+
 <body>
   <div class="content">
-        <div class="search">
-           <input type="text" placeholder="Найти всё">
-           <button>Найти</button>   
+    <div class="search">
+      <input type="text" placeholder="Найти всё">
+      <button>Найти</button>
+    </div>
+
+    <div class="ad">
+      <div class="adImg"></div>
+      <p>Lorem ipsum dolor sit amet </p>
+      <div class="right">
+        <div class="menu">
+          <div class="dot"></div>
+          <div class="dot"></div>
+          <div class="dot"></div>
         </div>
-        
-        <div class="news">
-            <div class="ad"></div>
-        </div>
+      </div>
+
+    </div>
+
+    <div class="main">
+      <div class="news">
+        <div class="mainNews"></div>
+        <div class="allNews"></div>
+      </div>
+
+      <div class="aside">
+        <div class="weather"></div>
+        <div class="aboutMoney"></div>
+      </div>
+
+
+    </div>
+  </div>
+
   </div>
 
 </body>
+
 </html>
